--- a/BigTech.Application/Resources/ErrorMessage.resx
+++ b/BigTech.Application/Resources/ErrorMessage.resx
@@ -141,8 +141,17 @@
   <data name="ReportsNotFound" xml:space="preserve">
     <value>Отчеты не найдены</value>
   </data>
+  <data name="RoleAlreadyExists" xml:space="preserve">
+    <value>Роль уже существует</value>
+  </data>
+  <data name="RoleNotFound" xml:space="preserve">
+    <value>Роль не найдена</value>
+  </data>
   <data name="UserAlreadyExists" xml:space="preserve">
     <value>Пользователь с такими данными уже существует</value>
+  </data>
+  <data name="UserAlreadyExistsThisRole" xml:space="preserve">
+    <value>У пользователя уже есть такая роль</value>
   </data>
   <data name="UserNotFound" xml:space="preserve">
     <value>Пользователь не найден</value>
